# url_shortener

./: .gitignore  README.md  pyproject.toml  requirements.txt
url_shortener/: __init__.py  model.py  route.py
url_shortener/templates/: index.html  url_added.html
