[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = "Create a url_shortener server"
authors = ["aru"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
python-dotenv = "^0.15.0"
pip = "^20.3.1"
install = "^1.3.4"
mysql-connector-python = "^8.0.22"
PyMySQL = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
